<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:id="@+id/preview_dashboard_v"
            android:background="#ffebebeb"
            android:scrollbars="vertical"
            android:fadingEdge="vertical"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickDo"
                    android:text="@string/activity_main_network" />

                <Button
                    android:id="@+id/btnPrintImageFile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickDo"
                    android:text="@string/activity_esc_function_btnprintimagefile" />

                <Button
                    android:id="@+id/btnCamera2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickDo"
                    android:text="@string/camera2" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
