<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/activity_qrcode_size" />

        <RadioGroup
            android:id="@+id/rg_inch"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_inch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:checked="true"
                android:textSize="16sp"
                android:text="576" />

            <RadioButton
                android:id="@+id/rb_inch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="384" />

            <RadioButton
                android:id="@+id/rb_inch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="832" />

            <RadioButton
                android:id="@+id/rb_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/activity_main_original" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/activity_page_mode_print_direction" />

        <RadioGroup
            android:id="@+id/rg_dpi4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:checked="true"
                android:text="0" />

            <RadioButton
                android:id="@+id/rb_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:text="90" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">
             <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:textColor="@color/black"
                  android:text="Light"></TextView>
                      <RadioGroup
                          android:id="@+id/rg_gray"
                          android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <RadioButton
                              android:id="@+id/rb_shake"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:buttonTint="@color/colorPrimary"
                              android:textColor="@color/black"
                              android:textSize="12dp"
                              android:checked="true"
                              android:text="@string/activity_main_shake" />

                          <!--
                          <RadioButton
                              android:id="@+id/rb_bw"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:buttonTint="@color/colorPrimary"
                              android:layout_marginLeft="4dp"
                              android:textSize="12dp"
                              android:textColor="@color/black"
                              android:text="@string/activity_main_bw" />

                          <RadioButton
                              android:id="@+id/rb_bw_threshold"
                              android:layout_width="wrap_content"
                              android:textSize="12dp"
                              android:layout_height="wrap_content"
                              android:buttonTint="@color/colorPrimary"
                              android:layout_marginLeft="4dp"
                              android:textColor="@color/black"
                              android:text="@string/activity_main_bw_threshold" />
                        -->
                          <RadioButton
                              android:id="@+id/rb_gather"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textSize="12dp"
                              android:buttonTint="@color/colorPrimary"
                              android:layout_marginLeft="4dp"
                              android:textColor="@color/black"
                              android:text="@string/activity_main_gather" />
                      </RadioGroup>

    </LinearLayout>
<!--
    <LinearLayout
        android:id="@+id/ll_threshold_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:text="@string/activity_main_threshold" />

        <EditText
            android:id="@+id/et_threshold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="128"
            android:ems="6"
            android:gravity="center"
            android:background="@drawable/edittext_no_arc" />
    </LinearLayout>
-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:text="@string/activity_main_light" />

        <SeekBar
            android:id="@+id/seekbar_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="40"
            android:progress="30" />

        <!-- TextView to display the value of the SeekBar -->
        <TextView
            android:id="@+id/seekbar_light_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:text="100" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:text="@string/constrast" />

        <!-- TextView to display the value of the SeekBar -->
        <SeekBar
            android:id="@+id/seekbar_constrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="20"
            android:progress="13" />

        <TextView
            android:id="@+id/seekbar_contrast_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:text="5" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:contentDescription="Photo Preview" />


</LinearLayout>